# text-axum

./: .env  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  swagger.rs
api/src/account/: info.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  response.rs
common/src/account/: info.rs
db/: Cargo.toml
db/src/account/entities/: account.rs  mod.rs  prelude.rs
handlers/: Cargo.toml
handlers/src/: lib.rs  routers.rs
handlers/src/account/: controller.rs  mod.rs
service/: Cargo.toml
service/src/account/: account_service.rs
