[package]
name = "common"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sea-orm = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }