[package]
name = "common"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }

utoipa = { workspace = true }