[package]
name = "handlers"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
service = { path = "../service" }
api = { path = "../api" }
common = { path = "../common" }

axum = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = {workspace = true}