[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }

tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
sea-orm = { workspace = true, features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
anyhow = { workspace = true }
serde = { workspace = true }
tower-cookies = { workspace = true }